css/index.css
.issue3-scene {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  margin-bottom: 20%;
}

.issue3-scene .wall {
  background-color: #00d0ff;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.main-scene {
  position: relative;
  width: 1988px;
  max-width: 100%;
  height: auto;
  top: 21.2%;
}

.mountain-bg {
  margin: auto;
  background-image: url(/images/issue3/header.png);
  background-color: #00d0ff;
  background-size: contain;
  background-repeat: no-repeat;
  width: 100%;
  height: auto;
}

.main-scene,
.mountain-bg {
  aspect-ratio: 1571 / 440;
}

.mountain-bg-left {
  position: absolute;
  left: 0;
  width: 50%;
  height: 100%;
  background-image: url(/images/issue3/header-repeat-left.png);
  background-size: contain;
  background-repeat: repeat-x;
}

.mountain-bg-right {
  position: absolute;
  right: 0;
  width: 50%;
  height: 100%;
  background-image: url(/images/issue3/header-repeat-right.png);
  background-size: contain;
  background-repeat: repeat-x;
}

.center-stage {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.header-box {
  position: relative;
  width: 66%;
  height: 100%;
}

.pouch-title-box {
  position: absolute;
  width: 43%;
  top: 95%;
  left: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.pouch-title {
  background-image: url(/images/issue3/pouch-3-title.svg);
  background-size: contain;
  background-repeat: no-repeat;
  aspect-ratio: 300 / 82;
  width: 100%;
}

.pouch-subtitle {
  text-align: center;
  font-family: "Gaegu", sans-serif;
  font-size: clamp(10px, 3vw, 34px);
}

.flower-1 {
  position: absolute;
  background-image: url(/images/issue3/flower-1.png);
  background-size: contain;
  background-repeat: no-repeat;
  aspect-ratio: 108 / 65;
}

.flower-2 {
  position: absolute;
  background-image: url(/images/issue3/flower-2.png);
  background-size: contain;
  background-repeat: no-repeat;
  aspect-ratio: 95 / 62;
}

.center-stage .flower-1 {
  bottom: -5%;
  left: 7%;
  width: 4%;
}

.center-stage .flower-2 {
  bottom: -55%;
  right: 7%;
  width: 3%;
}

.bunny {
  position: absolute;
  top: 33%;
  right: 0;
  background-image: url(/images/issue3/pouch-journaling-header.png);
  background-size: contain;
  background-repeat: no-repeat;
  aspect-ratio: 1074 / 956;
  width: 55%;
}

.skybunny-box {
  position: absolute;
  top: 0%;
  right: 0;
  width: 8%;

  animation: linear infinite;
  animation-name: run;
  animation-duration: 500s;
  animation-delay: -300s;

  /* animation-duration: 5s; */
  transform: scaleX(1);
}

.skybunny {
  position: absolute;
  top: 0;
  right: 0;
  background-image: url(/images/issue3/trashbunny.png);
  background-size: contain;
  background-repeat: no-repeat;
  aspect-ratio: 180 / 137;
  width: 50%;
}

.balloon {
  position: absolute;
  top: 0;
  left: 15%;
  background-image: url(/images/issue3/balloon.png);
  background-size: contain;
  background-repeat: no-repeat;
  aspect-ratio: 43 / 103;
  width: 15%;
}

.eraser {
  display: none;
}

#issue3-look-inside-pouch {
  margin-left: auto;
  margin-right: auto;
  max-width: 1024px;
  margin-bottom: 150px;
}

.white-card {
  background-color: white;
  border: 5px solid black;
  border-radius: 50px;
  padding: 35px;
}

.white-card h2 {
  font-size: 28px;
  text-align: center;
  margin: 0;
}

#issue3-look-inside-pouch p {
  font-size: 16pt;
  line-height: 1.5;
  margin: 0;
  text-align: center;
}

#issue3-look-inside-pouch {
  display: flex;
  flex-direction: column;
  gap: 30px;
  justify-content: center;
  align-items: center;
  padding: 30px 50px;
}

#issue3-look-inside-pouch video {
  width: 70%;
  border-radius: 10px;
  object-fit: cover;
  aspect-ratio: 6 / 5;
}



#easel-container {
  position: relative;
  width: 800px;
  aspect-ratio: 1064 / 1250;
  margin-left: auto;
  margin-right: auto;
}

#easel-bunny {
  background-image: url(/images/issue3/standing.png);
  background-size: contain;
  background-repeat: no-repeat;
  aspect-ratio: 346 / 747;
  width: 15%;
  position: absolute;
  bottom: 2%;
  right: -5%;
}

#easel {
  position: absolute;
  background-image: url(/images/issue3/easel.png);
  background-size: contain;
  background-repeat: no-repeat;
  aspect-ratio: 1064 / 1143;
  width: 90%;
  left: 5%;
}

#easel-title {
  position: absolute;
  bottom: 10.2%;
  text-align: center;
  width: 100%;
  font-size: 18px;
  font-weight: bold;
}

#spread-container {
  position: absolute;
  display: flex;
  flex-direction: row;
  /* box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25); */
  top: 8.5%;
  /* transform: rotate(-0.25deg); */
  width: 99%;
  left: 0.5%;
  cursor: pointer;
}

#pouch-first-page,
#pouch-page-flip-container {
  width: 50%;
}

#pouch-first-page {
  background-image: url(/images/issue3/toc-page.png);
  background-size: cover;
  background-repeat: no-repeat;
  aspect-ratio: 264 / 375;
}

.card {
  position: relative;
}

.content {
  position: absolute;
  width: 100%;
  height: 100%;
  transform-origin: 0% 0%;

  transition: transform 1s;
  transform-style: preserve-3d;
}

#top-pouch.open .content {
  transform: rotateY(-180deg);
  transition: transform 0.5s;
}

.under-pouch-cover,
.front,
.back {
  position: absolute;
  width: 100%;
  backface-visibility: hidden;
  background-size: cover;
  width: 100%;
  aspect-ratio: 264 / 375;
  background-repeat: no-repeat;
}

.back {
  transform: rotateY(180deg);
  background-image: url(/images/issue3/toc-page3.png);
}

#top-pouch {
  perspective: 1500px;
  width: 100%;
  aspect-ratio: 264 / 375;
}

.pouch,
.pouch-cover {
  background-image: url(/images/issue3/toc-page2.png);
  background-size: cover;
  width: 100%;
  aspect-ratio: 264 / 375;
  background-repeat: no-repeat;
}

.under-pouch-cover {
  background-image: url(/images/issue3/toc-page4.png);
  background-color: white;
  background-size: cover;
  aspect-ratio: 264 / 375;
  width: 100%;
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 5%;
  text-align: center;
  padding: 10%;
}

#issue3-buy-pouch-3 {
  display: flex;
  flex-direction: row;
  max-width: 1024px;
  justify-content: center;
  align-items: center;
  gap: 75px;
  margin-bottom: 75px;
}

#pouch-3-cover {
  background-image: url(/images/issue3/pouch-issue-3-cover.png);
  aspect-ratio: 1749 / 2481;
  height: 550px;
  background-size: contain;
  background-repeat: no-repeat;
  border: 5px solid white;
  transform: rotate(-4deg);
  box-sizing: content-box;
}

#issue3-buy-pouch-3 .white-card {
  width: 450px;
  padding: 50px;
  text-align: center;
}

#issue3-thank-you {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-bottom: 50px;
  max-width: 1024px;
}

#tree {
  background-image: url(/images/issue3/tree.png);
  aspect-ratio: 416 / 440;
  height: 440px;
  background-size: contain;
  background-repeat: no-repeat;
  position: relative;
  left: -75px;
}

.blank-card {
  max-width: 600px;
}

.blank-card p {
  text-align: center;
}

.blank-card h2 {
  font-size: 34px;
  text-align: center;
}

@keyframes run {
  0% {
    right: -8%;
    top: 0;
    transform: scaleX(1);
  }
  12%,
  37%,
  62%,
  87% {
    top: 4%;
  }
  25%,
  75% {
    top: 0;
  }
  50% {
    top: 0;
    right: 100%;
    transform: scaleX(1);
  }
  52% {
    transform: scaleX(-1);
  }
  100% {
    top: 0;
    right: -8%;
    transform: scaleX(-1);
  }
}

@media (max-width: 900px) {
  .skybunny-box {
    display: none;
    /* width: 20%; */
  }

  .pouch-title-box {
    width: 80%;
    left: 10%;
    top: 5%;
  }

  .bunny {
    width: 90%;
    bottom: 0;
    right: -10%;
    top: unset;
  }

  .header-box {
    width: 90%;
  }

  .main-scene,
  .mountain-bg {
    aspect-ratio: 800 / 440;
  }

  .mountain-bg {
    background-size: 200%;
    background-position: 41% -150%;
  }

  .pouch-subtitle {
    font-size: clamp(10px, 6vw, 28px);
  }

  .eraser {
    position: absolute;
    bottom: 17%;
    left: 3%;
    background-image: url(/images/issue3/eraser.png);
    background-size: contain;
    background-repeat: no-repeat;
    aspect-ratio: 213 / 115;
    width: 20%;
    transform: rotate(-10deg);
    display: block;
  }
  .dialogue {
    position: absolute;
    top: -250%;
    left: 0%;
    background-image: url(/images/issue3/dialogue.png);
    background-size: contain;
    background-repeat: no-repeat;
    aspect-ratio: 310 / 276;
    width: 125%;
    transform: rotate(37deg);
  }
}

